--- a/views/search.erb
+++ b/views/search.erb
@@ -78,7 +78,7 @@
                 <fieldset>
                   <legend>Nucleotide databases</legend>
                   <div class="controls offset-left">
-                    <% settings.databases.values.select{|database| database.type == :nucleotide}.sort.each do |database| %>
+                    <% databases.values.select{|database| database.type == :nucleotide}.sort.each do |database| %>
                       <label class="checkbox">
                         <input type="checkbox" name="databases[]" value="<%=database.hash%>" data-type="<%=database.type%>" />
                         <span> <%= database.title or database.name %></span>
@@ -96,7 +96,7 @@
                 <fieldset>
                   <legend>Protein databases</legend>
                   <div class="controls offset-left">
-                    <% settings.databases.values.select{|database| database.type == :protein}.sort.each do |database| %>
+                    <% databases.values.select{|database| database.type == :protein}.sort.each do |database| %>
                       <label class="checkbox">
                         <input type="checkbox" name="databases[]" value="<%=database.hash%>" data-type="<%=database.type%>" />
                         <span> <%= database.title or database.name %></span>
