--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -53,7 +53,7 @@ body {
 }
 
 #banner {
-  background: #EBCD7B;
+  background: #ABD240;
   padding: 2%;
   border-radius: 6px 6px 0px 0px;
   text-align: center;
@@ -195,7 +195,7 @@ div.focussed {
 }
 
 #underbar {
-  background: #EBCD7B;
+  background: #ABD240;
   padding: 1%;
   border-bottom-right-radius: 6px;
   border-bottom-left-radius: 6px;
